Api-Tfg/src/main/kotlin/com/example/Api_Tfg/error/exception/UserExistException.kt
package com.example.Api_Tfg.error.exception

class UserExistException (message: String) : Exception("User Exist (400). $message") {
}